--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1" />-->
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="web3 article"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +25,8 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script type="module" src="/src/index.jsx"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
